<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mi_menu_overview"
            android:icon="@drawable/ic_overview_menu_24dp"
            android:title="@string/mi_menu_overview_label"
            app:showAsAction="ifRoom|collapseActionView" />

        <item
            android:id="@+id/mi_menu_trailers"
            android:icon="@drawable/ic_trailers_menu_24dp"
            android:title="@string/mi_menu_trailers_label"
            app:showAsAction="ifRoom|collapseActionView" />

        <item
            android:id="@+id/mi_menu_reviews"
            android:icon="@drawable/ic_reviews_menu_24dp"
            android:title="@string/mi_menu_reviews_label"
            app:showAsAction="ifRoom|collapseActionView" />
    </group>
</menu>