<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/trailer_bottom_padding"
        android:paddingTop="@dimen/trailer_top_padding">

        <ImageView
            android:id="@+id/play_trailer"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:contentDescription="@string/cd_play_image"
            android:padding="@dimen/play_button_padding"
            app:srcCompat="@drawable/ic_play_arrow_24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/trailer_left_padding"
                    android:paddingStart="@dimen/trailer_left_padding"
                    android:paddingRight="@dimen/trailer_left_padding"
                    android:paddingEnd="@dimen/trailer_right_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:text="@string/sample_trailer_type"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/trailer_right_padding"
                    android:paddingLeft="@dimen/trailer_left_padding"
                    android:paddingRight="@dimen/trailer_left_padding"
                    android:paddingStart="@dimen/trailer_left_padding"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:typeface="normal"
                    tools:text="@string/sample_trailer_size"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/trailer_bottom_padding"
                android:paddingEnd="@dimen/trailer_right_padding"
                android:paddingLeft="@dimen/trailer_left_padding"
                android:paddingRight="@dimen/trailer_right_padding"
                android:paddingStart="@dimen/trailer_left_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/sample_trailer_name"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:paddingEnd="@dimen/divider_padding_left_right"
        android:paddingLeft="@dimen/divider_padding_left_right"
        android:paddingRight="@dimen/divider_padding_left_right"
        android:paddingStart="@dimen/divider_padding_left_right"
        android:paddingTop="@dimen/divider_padding_top_bottom" />
</LinearLayout>
