<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/movie_info_info_bottom_padding"
            android:paddingEnd="@dimen/movie_info_info_right_padding"
            android:paddingLeft="@dimen/movie_info_info_left_padding"
            android:paddingRight="@dimen/movie_info_info_right_padding"
            android:paddingStart="@dimen/movie_info_info_left_padding"
            android:paddingTop="@dimen/movie_info_info_top_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="@string/sample_year"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/movie_info_info_left_padding"
            android:paddingStart="@dimen/movie_info_info_left_padding"
            android:paddingBottom="@dimen/movie_info_info_bottom_padding"
            android:paddingRight="@dimen/movie_info_info_right_padding"
            android:paddingEnd="@dimen/movie_info_info_right_padding"
            android:paddingTop="@dimen/movie_info_info_top_padding"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/onestar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/cd_rating" />

            <ImageView
                android:id="@+id/twostar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/cd_rating" />

            <ImageView
                android:id="@+id/threestar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/cd_rating" />

            <ImageView
                android:id="@+id/fourstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/cd_rating" />

            <ImageView
                android:id="@+id/fivestar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/cd_rating" />
        </LinearLayout>

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/movie_info_info_bottom_padding"
            android:paddingLeft="@dimen/movie_info_info_left_padding"
            android:paddingStart="@dimen/movie_info_info_left_padding"
            android:paddingTop="@dimen/movie_info_info_top_padding"
            tools:srcCompat="@drawable/ic_favorite_off_24dp"
            android:contentDescription="@string/cd_favorites_label"
            android:paddingRight="@dimen/movie_info_info_right_padding"
            android:paddingEnd="@dimen/movie_info_info_right_padding"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


</layout>